Minor changed to AuctionMatcherTest